# charlatan

./: Cargo.toml  README.md  workflow.dia
.github/workflows/: rust.yml
src/: install.rs  main.rs
